@@ -61,6 +61,9 @@ public:
 	void displayError(const QString&);
 	void addStatusWidget(QWidget*);
 	void setAdditionalStatusWidgets(const QWidgetList&);
+	
+	void saveState();
+	void restoreState();
 
 signals:
 	void settingsApplied();
