@@ -4,6 +4,8 @@ Version 0.5-svn:
 2009-03-11:
 * Added: guessing file's syntax by its 1st line.
 * Added: customizing the main toolbar in config file.
+* Added: EOL auto-detection and changing by the user.
+* Fixed: restoring toolbars and docks positions after restart.
 
 2009-03-10:
 * Added: basic code for Rich text engine.
